# Comparison-of-Machine-Learning-Algorithms

./: .gitignore  .gitlab-ci.yml  README.md  diary.md
product/: CMakeLists.txt
product/headers/: main.hpp
product/product_tests/: test_main.cpp
product/src/: main.cpp  main_runner.cpp
